WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202804
Various test-cases from Gecko assert with ASSERTION FAILED: tagName == mmultiscriptsTag or ASSERTION FAILED: tagName == mrootTag
https://bugs.webkit.org/show_bug.cgi?id=202804
Summary
Various test-cases from Gecko assert with ASSERTION FAILED: tagName == mmulti...
Emilio Cobos Álvarez (:emilio)
Reported
2019-10-10 10:32:54 PDT
On master (247b0314320d499ae788b6ea993aa1d98e2d607e /
r250962
), WebKitGTK build. The following files when ran locally fail the assertions in either: *
https://webkit-search.igalia.com/webkit/rev/3994522544ee5be18e96c34640528f8a27462ee4/Source/WebCore/mathml/MathMLRootElement.cpp#45
*
https://webkit-search.igalia.com/webkit/rev/3994522544ee5be18e96c34640528f8a27462ee4/Source/WebCore/mathml/MathMLScriptsElement.cpp#55
Note that you may need to download them and run locally, otherwise CSP won't execute scripts (if any). *
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/generic/crashtests/368461-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/generic/crashtests/370884-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/generic/crashtests/382208-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/generic/crashtests/395450-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/generic/crashtests/472587-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/generic/crashtests/514098-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/mathml/crashtests/404485-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/mathml/crashtests/405271-1.xml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/mathml/crashtests/416907-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/style/crashtests/469432-1.xhtml
*
https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/style/crashtests/539613-1.xhtml
Attachments
Patch
(6.29 KB, patch)
2020-10-11 04:46 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(6.31 KB, patch)
2020-10-11 08:15 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(6.32 KB, patch)
2020-10-11 10:32 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-10-11 04:46:46 PDT
Created
attachment 411048
[details]
Patch
Frédéric Wang Nélar
Comment 2
2020-10-11 05:23:55 PDT
Comment on
attachment 411048
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=411048&action=review
> LayoutTests/mathml/scripts-with-prefixes.xhtml:17 > + <m:munderover/>
Please add one for mmultiscripts too.
Rob Buis
Comment 3
2020-10-11 08:15:10 PDT
Created
attachment 411052
[details]
Patch
EWS
Comment 4
2020-10-11 10:06:00 PDT
Frederic Wang found in /Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog does not appear to be a valid reviewer according to contributors.json. /Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Rob Buis
Comment 5
2020-10-11 10:32:16 PDT
Created
attachment 411056
[details]
Patch
EWS
Comment 6
2020-10-11 12:16:53 PDT
Committed
r268324
: <
https://trac.webkit.org/changeset/268324
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411056
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-10-11 12:17:18 PDT
<
rdar://problem/70184786
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug