Various test-cases from Gecko assert with ASSERTION FAILED: tagName == mmultiscriptsTag or ASSERTION FAILED: tagName == mrootTag https://bugs.webkit.org/show_bug.cgi?id=202804

Patch by Rob Buis <rbuis@igalia.com> on 2020-10-11
Reviewed by Frédéric Wang.

Source/WebCore:

Both rootTypeOf and scriptTypeOf were expecting the qualified name
to have no prefix, however it is possible in xhtml that prefixes are
set, as seen in the Gecko test cases. Failing to detect the qname
would hit an ASSERT in both cases. So use QualifiedName.matches
which ignores prefixes.

Tests: mathml/scripts-with-prefixes.xhtml
       mathml/square-roots-with-prefixes.xhtml

* mathml/MathMLRootElement.cpp:
(WebCore::rootTypeOf):
* mathml/MathMLScriptsElement.cpp:
(WebCore::scriptTypeOf):

LayoutTests:

Reduce Gecko test crashes into two tests.

* mathml/scripts-with-prefixes-expected.txt: Added.
* mathml/scripts-with-prefixes.xhtml: Added.
* mathml/square-roots-with-prefixes-expected.txt: Added.
* mathml/square-roots-with-prefixes.xhtml: Added.

Canonical link: https://commits.webkit.org/230347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268324 268f45cc-cd09-0410-ab3c-d52691b4dbfc